force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__BalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceAmount__c</fullName>
    <label>Balance</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BalanceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>