force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__CreationMode__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreationMode__c</fullName>
    <label>Creation Mode</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreationMode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>