force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__DaysInvoiceOverdueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DaysInvoiceOverdueNumber__c</fullName>
    <label>Days Invoice Overdue</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DaysInvoiceOverdueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>