force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__FullSettlementDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FullSettlementDate__c</fullName>
    <label>Full Settlement Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FullSettlementDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>