force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvoiceDate__c</fullName>
    <label>Invoice date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvoiceDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>