force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvoiceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>