force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__InvoiceReferenceText__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvoiceReferenceText__c</fullName>
    <label>Invoice Reference</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvoiceReferenceText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>