force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__InvoiceSettlementLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvoiceSettlementLevel__c</fullName>
    <label>Settlement Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvoiceSettlementLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>