force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__IsBillingScheduleGroupSkipped__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsBillingScheduleGroupSkipped__c</fullName>
    <label>Is Billing Schedule Group Skipped</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsBillingScheduleGroupSkipped</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>