force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__PaymentExclusionReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentExclusionReasonText__c</fullName>
    <label>Payment Exclusion Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentExclusionReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>