force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentTermId__c</fullName>
    <label>Payment Term</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentTermId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>