force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__PostedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PostedDate__c</fullName>
    <label>Posted Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PostedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>