force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__ReferenceEntity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceEntity__c</fullName>
    <label>Reference Entity</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceEntity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>