force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__ReferenceEntityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceEntityId__c</fullName>
    <label>Reference Entity Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceEntityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>