force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotalAdjustmentWithTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalAdjustmentWithTaxAmount__c</fullName>
    <label>Total Adjustment Amount With Tax</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalAdjustmentWithTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>