force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotalChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalChargeAmount__c</fullName>
    <label>Total Charge Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalChargeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>