force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotalConvertedNegAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalConvertedNegAmount__c</fullName>
    <label>Total Converted Neg Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalConvertedNegAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>