force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotalPaymentLineInvAppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalPaymentLineInvAppliedAmount__c</fullName>
    <label>Total Payment Line Inv Applied</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalPaymentLineInvAppliedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>