force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotalPaymentLineInvUnappliedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalPaymentLineInvUnappliedAmount__c</fullName>
    <label>Total Payment Line Inv Unapplied</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalPaymentLineInvUnappliedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>