force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotPymtLineInvLineAppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotPymtLineInvLineAppliedAmount__c</fullName>
    <label>Tot Pymt Line Inv Line Applied</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotPymtLineInvLineAppliedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>