force-app/main/default/objects/ssot__Invoice__dlm/fields/ssot__TotPymtLineInvLineUnappAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotPymtLineInvLineUnappAmount__c</fullName>
    <label>Tot Pymt Line Inv Line Unapp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotPymtLineInvLineUnappAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>